@@ -34,7 +34,7 @@ export MAVEN_OPTS="-Xmx512m -XX:PermSize=256m"
     <groupId>com.intel.ia</groupId>
     <artifactId>IntelAnalytics</artifactId>
     <packaging>pom</packaging>
-    <version>0.8.0-SNAPSHOT</version>
+    <version>0.8.6-SNAPSHOT</version>
     <name>IntelAnalytics Parent</name>
     <description>IntelAnalytics : Large Scale Graph Analytics</description>
     <inceptionYear>2013</inceptionYear>
@@ -103,7 +103,7 @@ export MAVEN_OPTS="-Xmx512m -XX:PermSize=256m"
         <maven>3.0</maven>
     </prerequisites>
     <properties>
-        <project.version>0.8.0-SNAPSHOT</project.version>
+        <project.version>0.8.6-SNAPSHOT</project.version>
         <top.dir>${project.basedir}</top.dir>
         <buildtype>test</buildtype>
 
@@ -327,7 +327,9 @@ export MAVEN_OPTS="-Xmx512m -XX:PermSize=256m"
                                 <reportsDirectory>${project.build.directory}/surefire-reports</reportsDirectory>
                                 <junitxml>.</junitxml>
                                 <filereports>WDF TestSuite.txt</filereports>
-                                <parallel>true</parallel>
+                                <parallel>false</parallel>
+                                <stdout>FTD</stdout>
+                                <argLine>-Xmx512m -XX:PermSize=256m</argLine>
                             </configuration>
                             <executions>
                                 <execution>
@@ -372,7 +374,7 @@ export MAVEN_OPTS="-Xmx512m -XX:PermSize=256m"
                  Scoverage is should only be used on a single module at a time or it produces inaccurate results.
 
                  The right way to use it is to run "mvn install" on the full project.  Change directory to the
-                 submodule and run "mvn clean test scoverage:report".
+                 submodule and run "mvn -Pscala-coverage clean test scoverage:report".
             -->
             <activation>
                 <activeByDefault>false</activeByDefault>
@@ -619,10 +621,10 @@ export MAVEN_OPTS="-Xmx512m -XX:PermSize=256m"
                 <artifactId>scalariform-maven-plugin</artifactId>
             </plugin>
 
-            <plugin>
+            <!--<plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-shade-plugin</artifactId>
-            </plugin>
+            </plugin>-->
 
             <plugin>
                 <artifactId>maven-clean-plugin</artifactId>
@@ -914,6 +916,11 @@ export MAVEN_OPTS="-Xmx512m -XX:PermSize=256m"
             <dependency>
                 <groupId>org.apache.spark</groupId>
                 <artifactId>spark-mllib_${scala.short.version}</artifactId>
+                <version>${dep.spark.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.apache.spark</groupId>
+                <artifactId>spark-graphx_${scala.short.version}</artifactId>
                 <version>${dep.spark.version}</version>
             </dependency>
             <!--org.apache.mahout-->
